<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:background="#C0A9EA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profile_pic"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/icono_films" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTitulo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/aladin"
                    android:text="@string/hint_titulo"
                    android:textColor="#17ABB1"
                    android:textSize="28sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvGenero"
                    android:textSize="20sp"
                    android:fontFamily="@font/aladin"
                    android:layout_marginTop="5dp"
                    android:text="@string/g_nero"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvYear"
                    android:textSize="20sp"
                    android:fontFamily="@font/aladin"
                    android:layout_marginTop="5dp"
                    android:text="@string/hint_year"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDirector"
                    android:textSize="20sp"

                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/aladin"
                    android:text="@string/hint_director"/>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/ivGeneroElegido"
            android:layout_width="105dp"
            android:layout_height="119dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="13dp"
            android:contentDescription="@string/imagenspinner"
            android:hint="@string/g_nero"
            android:src="@drawable/romance"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.996"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

        </ImageView>


    </RelativeLayout>

</LinearLayout>




